fix align-items

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
   width: 1100px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   flex-wrap: wrap;
   padding: 30px;
   padding-top: 200px;
@@ -36,11 +36,13 @@ body {
   flex-direction: column;
   box-shadow: 0 5px 20px rgba(0,0,0,0.5);
   transition: 0.3s ease-in-out;
+    align-items:start;
+
 }
 
 .container .card:hover{
   height: 420px;
-  align-items: start;;
+  align-items:flex-start;
 }
 
 .container .card .imgBx {
